--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_OPENAPI =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
-VITE_OMAPI=ef13973a00134aca5eddc96191877de5
+VITE_OPENAPI =
+VITE_OMAPI=
